--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
+.shadowed{
+  text-shadow: 1.0px 1.0px rgb(0, 0, 0,0.3);
+}
