--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,19 +1,19 @@
-<header class="grid items-center bg-mark ">
-  <div class="grid grid-rows-2 gap-y-2 items-center w-full  px-10 py-4  h-full
+<header class="grid items-center bg-mark laptop:px-11 laptop:py-6 ">
+  <div class="grid grid-rows-2 gap-y-2 items-center w-full  px-5 py-4  h-full
   tablet:h-44 tablet:grid-cols-[200px,1fr] tablet:grid-rows-1 tablet:gap-y-0
   laptop:w-full laptop:justify-self-center laptop:justify-items-center laptop:max-w-5xl">
-    <div class="grid grid-cols-1 items-center justify-items-center  w-full laptop:max-w-l">
+    <div class="grid grid-cols-1 items-center justify-items-center  w-full tablet:justify-items-start laptop:max-w-l  laptop:justify-items-start">
       <img class='h-24 min-w-20 tablet:h-32' src="assets/imgs/logo.png" alt="">
     </div>
     <div class="grid justify-items-center text-center w-full gap-y-2
     tablet:items-center
     laptop:justify-items-center ">
       <h1
-        class="font-arima font-semibold text-white drop-shadow-lg w-full shadow-black text-5xl tablet:text-5xl shadowed">
+        class="font-arima font-semibold text-white drop-shadow-lg w-full shadow-black text-5xl tablet:text-5xl shadowed laptop:text-7xl laptop:shadowed-xl">
         CATÁLOGO</h1>
       <h3
-        class="font-wide font-semibold text-white bg-black w-full grid justify-items-center text-2xl bg-dark text-md tablet:text-xl">
-        MAYORISTA</h3>
+        class="font-wide font-semibold text-white bg-black w-full grid justify-items-center text-2xl bg-dark text-md tablet:text-xl laptop:text-2xl">
+        LISTA MAYORISTA</h3>
     </div>
   </div>
 </header>
