--- a/src/app/pages/prices/prices.component.html
+++ b/src/app/pages/prices/prices.component.html
@@ -1,20 +1,10 @@
-<main class="grid grid-cols-1 mb-2 bg-white">
+<main class="grid grid-cols-1 mb-2 bg-white laptop:px-20 laptop:py-5">
 
 
   <div *ngFor="let category of categories">
     <app-price-container [category]="category"></app-price-container>
   </div>
-
-  <div class="font-inter font-semibold text-xl text-white text-center bg-dark px-5 py-0.5">Condiciones</div>
-  <div>
-    <div>
-      * Mínimo 20 litros(Total surtido a elección)
-    </div>
-    <div>
-      * Precios por litro
-    </div>
-    <div>
-      * Valor bidón 5 litros si no traes el tuyo:100
-    </div>
+  <div class="mt-2 px-1 tablet:px-0">
+    <app-price-conditions></app-price-conditions>
   </div>
 </main>
