--- a/src/app/prices/price-container/price-container.component.html
+++ b/src/app/prices/price-container/price-container.component.html
@@ -1,7 +1,7 @@
-<section class="grid grid-cols-1 mt-2 px-1 ">
+<section class="grid grid-cols-1 mt-2 px-1 tablet:px-0">
   <app-price-header [name]="category.name"></app-price-header>
   <div class="mt-2 border-t-2 border-black">
-    <div class="border-b-2 border-black" *ngFor="let price of category.prices">
+    <div class="border-b-2 border-black " *ngFor="let price of category.prices">
       <app-price-item [price]='price'></app-price-item>
     </div>
   </div>
