--- a/src/app/prices/price-header/price-header.component.html
+++ b/src/app/prices/price-header/price-header.component.html
@@ -1,1 +1,1 @@
-<div class="font-inter font-semibold text-xl text-white text-center bg-dark px-5 py-0.5">{{name}}</div>
+<div class="font-inter font-semibold text-xl text-white text-center bg-dark px-5 py-0.5 laptop:text-2xl">{{name}}</div>
