--- a/src/app/prices/price-item/price-item.component.html
+++ b/src/app/prices/price-item/price-item.component.html
@@ -1,8 +1,8 @@
-<div class="grid grid-cols-[8fr,2fr] content-between	justify-between ustify-items-stretch w-full px-5 py-0.5 ">
-  <span class="justify-self-start font-semibold text-lg">
+<div class="grid grid-cols-[8fr,2fr] content-between	justify-between ustify-items-stretch w-full px-5 py-0.5 tablet:px-11 ">
+  <span class="justify-self-start font-semibold text-lg laptop:text-xl" >
     {{price.name}}
   </span>
-  <span class="justify-self-end font-semibold text-lg">
+  <span class="justify-self-end font-semibold text-lg laptop:text-xl">
 
     ${{price.amount}}
   </span>
