Added SSR, Header&Footer fixes and footer Author

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="grid grid-cols-1 bg-mark justify-items-center  items-center py-7 px-3 ">
+<footer class="grid grid-cols-1 grid-rows-[2fr,1fr] bg-mark justify-items-center gap-y-2  items-center py-7 px-3 ">
   <section class=" grid grid-rows-3  w-full justify-items-center items-center justify-center align-center">
 
     <div
@@ -52,4 +52,8 @@
 
   </section>
 
+  <section class="grid grid-cols-1 grid-rows-2 font-wide text-md text-center tablet:grid-rows-1 tablet:grid-cols-[auto,auto] tablet:justify-center tablet:gap-x-1"  >
+    <p>© 2022 Olavarria, Buenos Aires, Argentina.</p>
+    <p class="w-auto">Hecho por <a class="font-semibold"  href="https://www.linkedin.com/in/ger%C3%B3nimo-alejandro-anselmo-712323104/">Gerónimo Anselmo</a></p>
+  </section>
 </footer>
