--- a/src/app/prices/price-conditions/price-conditions.component.html
+++ b/src/app/prices/price-conditions/price-conditions.component.html
@@ -4,7 +4,10 @@
     Los precios son por litro
   </li>
   <li class="font-inter font-medium text-md laptop:text-lg">
-    Mínimo 20 litros (Total surtido a elección)
+    Mínimo 20 litros (Total surtido a elección) en sueltos
+  </li>
+  <li class="font-inter font-medium text-md laptop:text-lg">
+    Y 6 unidades para los Artículos de limpieza
   </li>
   <li class="font-inter font-medium text-md laptop:text-lg">
     Bidón 5 litros: $130 (Son reutilizables)
