--- a/src/app/pages/prices/prices.component.html
+++ b/src/app/pages/prices/prices.component.html
@@ -2,9 +2,9 @@
 
 
   <div *ngFor="let category of categories">
-    <app-price-container [category]="category"></app-price-container>
+    <app-product-container [category]="category"></app-product-container>
   </div>
   <div class="mt-2 px-1 tablet:px-0">
-    <app-price-conditions></app-price-conditions>
+    <app-product-conditions></app-product-conditions>
   </div>
 </main>
