--- a/src/app/products/product-item/product-item.component.html
+++ b/src/app/products/product-item/product-item.component.html
@@ -1,9 +1,9 @@
 <div class="grid grid-cols-[8fr,2fr] content-between	justify-between ustify-items-stretch w-full px-5 py-0.5 tablet:px-11 ">
   <span class="justify-self-start font-semibold text-lg laptop:text-xl" >
-    {{price.name}}
+    {{product.name}}
   </span>
   <span class="justify-self-end font-semibold text-lg laptop:text-xl">
 
-    ${{price.amount}}
+    ${{product.price}}
   </span>
 </div>
