--- a/src/app/products/product-conditions/product-conditions.component.html
+++ b/src/app/products/product-conditions/product-conditions.component.html
@@ -10,6 +10,6 @@
     Y 6 unidades para los Artículos de limpieza
   </li>
   <li class="font-inter font-medium text-md laptop:text-lg">
-    Bidón 5 y 10 litros: $1200 (Son reutilizables)
+    Bidón 5 litros: $1500 (Son reutilizables)
   </li>
 </ul>
